--- a/1st/style.css
+++ b/1st/style.css
@@ -3,175 +3,74 @@
 /* ========================================
     リセットcss
 ========================================= */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 100%;
-  vertical-align: baseline;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin         : 0;
+  padding        : 0;
+  border         : 0;
+  font-style     : normal;
+  font-weight    : normal;
+  font-size      : 100%;
+  vertical-align : baseline;
 }
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display : block;
 }
 
-html {
-  overflow-y: scroll;
-}
+html {overflow-y : scroll;}
 
-blockquote,
-q {
-  quotes: none;
-}
+blockquote, q {quotes : none;}
 
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
+blockquote:before, blockquote:after, q:before, q:after {content : ''; content : none;}
 
-input,
-textarea {
-  margin: 0;
-  padding: 0;
-}
+input, textarea {margin : 0; padding : 0;}
 
-ol,
-ul {
-  list-style: none;
-}
+ol, ul {list-style : none;}
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+table {border-collapse : collapse; border-spacing : 0;}
 
-caption,
-th {
-  text-align: left;
-}
+caption, th {text-align : left;}
 
-a:focus {
-  outline: none;
-}
+a:focus {outline : none;}
+
 
 /* ========================================
 	フロートの解除
 ========================================= */
 
 .clearfix:after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
+  content    : ".";
+  display    : block;
+  height     : 0;
+  clear      : both;
+  visibility : hidden;
 }
+
 
 /* ========================================
 	全体設計
 ========================================= */
 body {
-  color: #555;
-  font-size: 14px;
-  line-height: 1;
-  font-family: "メイリオ", Meiryo;
-  background-color: #fff;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color                   : #555;
+  font-size               : 14px;
+  line-height             : 1;
+  font-family             : "メイリオ", Meiryo;
+  background-color        : #fff;
+  -webkit-font-smoothing  : antialiased;
+  -moz-osx-font-smoothing : grayscale;
 }
 
 /* ========================================
@@ -179,9 +78,9 @@ body {
 ========================================= */
 
 div#wrapper {
-  width: 960px;
-  height: auto; /* 自動調整 */
-  margin: 0 auto; /* 左右均等にマージンを設定(中央寄せ) */
+  width  : 960px;
+  height : auto; /* 自動調整 */
+  margin : 0 auto; /* 左右均等にマージンを設定(中央寄せ) */
 }
 
 /* ========================================
@@ -189,8 +88,8 @@ div#wrapper {
 ========================================= */
 
 header {
-  width: 960px;
-  height: 99px;
+  width  : 960px;
+  height : 99px;
   /* for test */
   /*
     background-color : pink;
@@ -198,27 +97,27 @@ header {
 }
 
 header h1 {
-  width: 213px;
-  height: 39px;
-  margin-top: 30px;
-  float: left;
+  width      : 213px;
+  height     : 39px;
+  margin-top : 30px;
+  float      : left;
 }
 
 nav {
-  float: right;
-  margin-top: 56px;
+  float      : right;
+  margin-top : 56px;
 }
 
 nav ul li {
-  float: left; /* リストを横並びにする */
-  margin-left: 20px;
+  float       : left; /* リストを横並びにする */
+  margin-left : 20px;
 }
 
 nav ul li a {
-  color: #555555;
-  text-decoration: none;
-  font-size: 14px;
-  font-weight: bold;
+  color           : #555555;
+  text-decoration : none;
+  font-size       : 14px;
+  font-weight     : bold;
 }
 
 /* ========================================
@@ -226,11 +125,11 @@ nav ul li a {
 ========================================= */
 
 div#mainimage {
-  width: 960px;
-  height: 300px;
+  width         : 960px;
+  height        : 300px;
   /* for test */
   /*background-color : skyblue;*/
-  margin-bottom: 30px;
+  margin-bottom : 30px;
 }
 
 /* ========================================
@@ -238,42 +137,42 @@ div#mainimage {
 ========================================= */
 
 div#left {
-  width: 280px;
-  height: auto;
+  width        : 280px;
+  height       : auto;
   /* for test */
   /*background-color : gray;*/
-  float: left;
-  margin-right: 30px;
+  float        : left;
+  margin-right : 30px;
 }
 
 div#left ul li {
-  width: 278px;
-  height: 48px;
-  background-color: #f5fbff;
-  margin-bottom: 10px;
-  border: 1px solid #63abd4; /* 1本線1ピクセルの境界線 */
+  width            : 278px;
+  height           : 48px;
+  background-color : #f5fbff;
+  margin-bottom    : 10px;
+  border           : 1px solid #63abd4; /* 1本線1ピクセルの境界線 */
 }
 
 div#left ul li a {
-  font-size: 16px;
-  font-weight: bold;
-  color: #555555;
-  text-decoration: none;
-  line-height: 50px; /* 行間調整(リストの高さ(境界線幅含む)を指定する) */
-  padding-left: 50px;
-  display: block; /* アンカータグをブロック要素にする */
+  font-size       : 16px;
+  font-weight     : bold;
+  color           : #555555;
+  text-decoration : none;
+  line-height     : 50px; /* 行間調整(リストの高さ(境界線幅含む)を指定する) */
+  padding-left    : 50px;
+  display         : block; /* アンカータグをブロック要素にする */
 }
 
 a#icon_tel {
-  background: url(images/icon_tel.png) no-repeat 14px center; /* 繰り返さない */
+  background : url(images/icon_tel.png) no-repeat 14px center; /* 繰り返さない */
 }
 
 a#icon_blog {
-  background: url(images/icon_blog.png) no-repeat 14px center; /* 繰り返さない */
+  background : url(images/icon_blog.png) no-repeat 14px center; /* 繰り返さない */
 }
 
 a#icon_voice {
-  background: url(images/icon_voice.png) no-repeat 14px center; /* 繰り返さない */
+  background : url(images/icon_voice.png) no-repeat 14px center; /* 繰り返さない */
 }
 
 /* ========================================
@@ -281,37 +180,45 @@ a#icon_voice {
 ========================================= */
 
 div#right {
-  width: 650px;
-  height: auto;
+  width  : 650px;
+  height : auto;
   /* for test */
   /*background-color : red;*/
-  float: left;
+  float  : left;
 }
 
 div#right h2 {
-  font-size: 18px;
-  font-weight: bold;
-  color: #555555;
+  font-size     : 18px;
+  font-weight   : bold;
+  color         : #555555;
+  margin-bottom : 15px;
 }
 
 div#right dt {
-  font-size: 12px;
-  flood-color: #a8a8a8;
-  float: left;
-  width: 94px;
-  line-height: 40px;
+  font-size    : 12px;
+  flood-color  : #a8a8a8;
+  float        : left;
+  width        : 79px;
+  line-height  : 40px;
+  padding-left : 15px;
 }
 
 div#right dd {
-  font-size: 13px;
-  flood-color: #555555;
-  float: left;
-  width: 556px;
-  line-height: 40px;
+  font-size   : 13px;
+  flood-color : #555555;
+  float       : left;
+  width       : 556px;
+  line-height : 40px;
+}
+
+/* 擬似クラス */
+div#right dt:nth-of-type(odd),
+div#right dd:nth-of-type(odd) {
+  background-color : #f5f5f5;
 }
 
 div.clearfix {
-  clear: both; /* float解除 */
+  clear : both; /* float解除 */
 }
 
 /* ========================================
@@ -319,9 +226,52 @@ div.clearfix {
 ========================================= */
 
 footer {
-  width: 100%; /* ウィンドウ幅と同じ */
-  height: 79px;
+  width            : 100%; /* ウィンドウ幅と同じ */
+  height           : auto;
   /* for test */
-  background-color: blue;
-  margin-top: 30px;
+  /*  background-color : blue;*/
+  margin-top       : 50px;
+  background-color : #63abd4;
+}
+
+div#footer_inner {
+  width    : 960px;
+  margin   : 0 auto;
+  position : relative; /* このボックスを基準として設定 */
+  padding: 20px 0;
+}
+
+p#pagetop a {
+  width            : 78px;
+  height           : 20px;
+  background-color : #63abd4;
+  text-align       : center;
+  color            : white;
+  display          : block;
+  text-decoration  : none;
+  line-height      : 20px;
+  position: absolute; /* 絶対位置を指定 */
+  top: -20px;
+  right: 0;
+}
+
+p#footer_logo{
+  float: left;
+}
+
+footer ul{
+  float: right;
+  margin-top : 24px;
+}
+
+footer ul li {
+  float: left;
+  margin-left : 20px;
+}
+
+footer ul li a{
+  color: white;
+  font-size : 14px;
+  font-weight: bold;
+  text-decoration: none;
 }
