--- a/2nd/style.css
+++ b/2nd/style.css
@@ -159,14 +159,15 @@ div#main_image {
 ========================================= */
 div#left {
   width            : 555px;
-  height           : 178px;
+  height           : auto;
   background-color : #fff;
   float            : left;
   margin           : 0 20px 0 0;
   padding          : 10px;
 }
 
-div#left h2 {
+div#left h2,
+div#left h3 {
   font-size    : 17px;
   font-weight  : bold;
   color        : #734339;
@@ -195,6 +196,33 @@ div#left ul li span {
   margin-right : 15px;
 }
 
+div#left dl {
+  margin-top : 11px;
+}
+
+div#left dl dt {
+  font-size   : 15px;
+  font-weight : normal;
+  color       : #734339;
+}
+
+div#left dl dd {
+  font-size     : 13px;
+  font-weight   : normal;
+  color         : #927e7a;
+  margin-left   : 10px;
+  margin-bottom : 20px;
+}
+
+/* 一番最後のddに対してのみ適用(擬似クラス) */
+div#left dl dd:last-child {
+  font-size     : 13px;
+  font-weight   : normal;
+  color         : #927e7a;
+  margin-left   : 10px;
+  margin-bottom : 0;
+}
+
 /* ========================================
     コンテンツ(右側)用
 ========================================= */
@@ -205,19 +233,19 @@ div#right {
 }
 
 div#right ul li {
-  line-height : 60px;
+  line-height   : 60px;
   margin-bottom : 20px;
 }
 
 div#right ul li a {
-  width   : 225px;
-  height  : 60px;
-  display : block;
-  font-size : 17px;
-  font-weight : bold;
-  color: #734339;
-  text-decoration: none;
-  padding-left: 140px;
+  width           : 225px;
+  height          : 60px;
+  display         : block;
+  font-size       : 17px;
+  font-weight     : bold;
+  color           : #734339;
+  text-decoration : none;
+  padding-left    : 140px;
 }
 
 div#right ul li a#contact {
@@ -240,10 +268,94 @@ footer {
   height           : 58px;
   background-color : #345c39;
   margin           : 20px 0 0 0;
-  font-size : 12px;
-  color: #fff;
-  text-align: center;
-  line-height: 58px;
+  font-size        : 12px;
+  color            : #fff;
+  text-align       : center;
+  line-height      : 58px;
+}
+
+/* ========================================
+    メニュー一覧
+========================================= */
+h2#heading {
+  background    : url(images/title.jpg);
+  width         : 925px;
+  height        : 70px;
+  border        : 5px solid #fff;
+  margin-bottom : 20px;
+  font-size     : 27px;
+  font-weight   : bold;
+  color         : #2f5735;
+  line-height   : 70px;
+  padding-left  : 23px;
+}
+
+/* ========================================
+    コンタクトページ
+========================================= */
+p#contact_text {
+  font-size        : 12px;
+  line-height      : 18px; /* 行間調整 */
+  color            : #927e7a;
+  background-color : #ffefea;
+  padding          : 10px;
+  margin           : 10px 0 10px 0;
+}
+
+td.form_title {
+  width          : 131px;
+  height         : 32px;
+  font-size      : 15px;
+  color          : #734339;
+  font-weight    : bold;
+  vertical-align : top;
+}
+
+td.form_title label {
+  font-weight : bold;
+}
+
+td.form_contents {
+  font-size : 13px;
+  color     : #a6a6a6;
+}
+
+td.form_contents input#form_name,
+td.form_contents input#form_tel {
+  width  : 421px;
+  height : 22px;
+}
+
+td.form_contents input.form_time {
+  width        : 47px;
+  height       : 22px;
+  margin-right : 5px;
+  display      : inline-block; /* inputタグはインライン要素 */
+}
+
+td.form_contents textarea {
+  width  : 421px;
+  height : 83px;
+  border : 1px solid #a6a6a6;
+}
+
+p#submit {
+  text-align : right;
+}
+
+p#submit input {
+  background-color : #325a37;
+  border           : none;
+  font-size        : 18px;
+  font-weight      : bold;
+  color            : #fff;
+  width            : 136px;
+  height           : 40px;
+}
+
+p#submit input:hover {
+  cursor  : pointer;
+  opacity : .8;
 }
 
 /* メモ
